<resources>
    <string name="game_default_name">Select a tag</string>
    <string name="default_location_hint">Kepler-452b</string>
    <string name="game_quality_title">Video quality:</string>
    <string name="game_quality_title_en">Video quality:</string>
    <string name="live_start">Start</string>
    <string name="prepare_live_edittext_hint">Good titles give you more chances to get followers</string>
    <string name="network_unavailable">Could\'t connect to the network</string>
    <string name="game_choose_tag_tip">Select a tag</string>
    <string name="third_party_system_version_error">Update system version before you install Mi Live</string>
    <string name="max_topic_count">Up to %d characters</string>
    <string name="forbid_capture">Allow Mi Live to record screen first</string>
    <string name="game_live_tag_title">Select a tag</string>
    <string name="game_back_to_app_message">Back to Mi Live</string>
    <string name="game_comment_title">Chat room</string>
    <plurals name="game_comment_number">
        <item quantity="one">%d person</item>
        <item quantity="other">%d people</item>
    </plurals>
    <string name="game_live_unexpected_end_toast">Error occurred. Session ended.</string>
    <string name="game_mute_microphone">Your microphone is muted</string>
    <string name="game_unmute_microphone">Microphone is on</string>
    <string name="game_save_picture_success">Screenshot saved in %s</string>
    <string name="game_save_picture_failed">Couldn\'t save, try again later</string>
    <string name="normal_live_tag_title">Select a circle</string>
    <string name="live_ended">Session ended</string>
    <string name="live_private_tip">Can\'t save private live stream</string>
    <string name="live_ended_back">Back to Home</string>
    <string name="live_delete">Delete replay</string>
    <plurals name="live_end_viewer_cnt">
        <item quantity="one">%d viewer</item>
        <item quantity="other">%d viewers</item>
    </plurals>
    <plurals name="live_end_ticket">
        <item quantity="one">This live stream got %d coin</item>
        <item quantity="other">This live stream got %d coins</item>
    </plurals>
    <plurals name="ticket_buyer_count">
        <item quantity="one">%1$d ticket</item>
        <item quantity="other">%1$d tickets</item>
    </plurals>
    <string name="confirm_delete_replay">Delete this record?</string>
    <string name="stop_live_dialog_message">End the session?</string>
    <string name="network_offline_warning">Can\'t connect to the network</string>
    <string name="file_upload_failed_path_error">Couldn\'t upload file, local path error</string>
    <string name="file_upload_failed_file_error">Couldn\'t upload file</string>
    <string name="begin_level_limit_default">Your level doesn\'t meet the conditions to start a live stream during this period of time</string>
    <string name="begin_level_limit">Only hosts above level %d could start live streams during this period of time</string>
    <string name="i_know">Got it</string>

    <string name="live_failure">Couldn\'t create channel, go back and try again</string>
    <string name="to_home">Back to Home</string>
    <string name="game_back_to_home">Session begins. Go back to Home and play the game now</string>
    <string name="room_admin">Manager</string>
    <string name="admin_list_title">Managers</string>

    <string name="admin_manager_tips">Attention:</string>
    <string name="admin_banspeaker_tips_1">1. This user is only banned in current session and will be allowed next time.</string>
    <string name="admin_banspeaker_tips_2">2. Banned users can\'t make comments, but can still give gifts.</string>

    <string name="block">Block</string>
    <string name="unblock">Remove</string>

    <string name="remove_blocked">Remove from blocklist</string>
    <string name="do_not_repeated_statement">Don\'t send duplicated comments</string>

    <string name="barrage_not_control">Allow</string>
    <string name="barrage_control_in_second">Once within %d s</string>
    <string name="barrage_control_in_min">Once within %d min</string>

    <string name="banspeaker_list">Banned</string>
    <string name="room_setting">Settings</string>

    <string name="block_confirm_tips">User added to blocklist can\'t watch your sessions (permanent)</string>
    <string name="cancel_banspeaker_fail">Couldn\'t allow comments</string>
    <string name="block_failed">Couldn\'t block</string>

    <string name="game_cancel_forbid_gift">Allow notifications of receiving gifts</string>
    <string name="game_cancel_forbid_system">Allow system messages</string>
    <string name="game_cancel_forbid_chat">Allow messages</string>
    <string name="game_forbid_gift_toast">Block notifications of receiving gifts</string>
    <string name="game_forbid_system_toast">Block system messages</string>
    <string name="game_forbid_chat_toast">Block chatting messagesdf</string>
    <string name="game_forbid_title">Message settings</string>
    <string name="game_forbid_gift">Gifts</string>
    <string name="game_forbid_system">System messages</string>
    <string name="game_forbid_chat">Chatsdf</string>

    <string name="setting_dialog_black_title">Attention</string>
    <string name="mic_occupy">Microphone is busy</string>
    <string name="start_stream_failure">Couldn\'t start, go back and try again</string>
    <string name="network_not_good_tip">Connection is too slow, video quality may be affected</string>
    <string name="network_change_tip">Using mobile data may generate additional carrier fees</string>
    <string name="warm_prompt">Attention</string>
    <string name="phone_interrupt">Session was paused before you picked up the call. Your phone conversations are always private.</string>
    <string name="close">Close</string>
    <string name="low">Low</string>
    <string name="middle">Medium</string>
    <string name="high">High</string>
    <string name="select_cover">Select cover</string>
    <string name="quanzi_default_name">Select a circle</string>
    <string name="add_topic">Add topic</string>
    <string name="quanzi_name">%s circle</string>
    <string name="live_plus_atmosphere">Effects</string>
    <string name="live_plus_comment">Messages</string>

    <string name="original">No reverb</string>
    <string name="recording_studio">Studio</string>
    <string name="ktv">KTV</string>
    <string name="concert">Concert</string>
    <string name="choose_hifi">High fidelity</string>
    <string name="mirror_image">Mirror camera</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_light">Flash</string>
    <string name="face_beauty">Beautify</string>
    <string name="expression">Live selfie masks</string>
    <string name="filter">Filter</string>

    <string name="filter_normal">Regular</string>
    <string name="filter_sweet">Sweet</string>
    <string name="filter_crema">Sepia</string>
    <string name="filter_nashville">Retro</string>
    <string name="filter_aden">Afternoon</string>
    <string name="filter_gingham">Amour</string>
    <string name="filter_stinson">Sweet tea</string>
    <string name="filter_clarendon">Icy</string>
    <string name="filter_juno">Warm</string>
    <string name="filter_dogpatch">Fresh</string>
    <string name="filter_gray">B&amp;W</string>
    <string name="saving_image">Saving\u2026</string>
    <string name="upload_failed">Couldn\'t upload</string>
    <string name="uploading">Uploading\u2026</string>
    <string name="photo_select_over_limit">Can select up to %d photos</string>
    <string name="select_done">Done (%1$d/%2$d)</string>
    <string name="photo_select">Select</string>
    <string name="photo_preview_title">%1$d/%2$d</string>
    <string name="photo">Photo</string>
    <string name="photo_file_list">Gallery</string>
    <string name="add_photo_pick_title">Select photo</string>
    <string name="photo_lib_title">%d selected</string>
    <string name="unknown_error">Unknown error</string>
    <string name="empty_tips">Empty</string>

    <string name="camera_occupy">Camera is busy</string>
    <string name="change_room_setting_success">Set successfully</string>
    <string name="change_room_setting_fail">Couldn\'t set</string>
    <string name="game_living">Game live</string>
    <string name="definition_high">HD</string>
    <string name="screen_live">Record screen</string>
    <string name="game_live">Game live</string>
    <string name="show_live">Show live</string>
    <string name="begin_live_title">Title:</string>
    <string name="live_title_change">Switch</string>
    <string name="live_title_clear">Clear</string>
    <string name="block_message">Block messages</string>
    <string name="mute_yes_or_no">Mute or not</string>
    <string name="mute_no">No</string>
    <string name="mute_yes">Yes</string>
    <string name="add_manager">Add manager</string>
    <string name="has_add_manager_count">Added %d</string>
    <string name="has_add_manager_count_zero">Haven\'t added managers</string>
    <string name="live_title_hint">Good titles give you more chances to get followers</string>
    <string name="daily_task_title">Daily task</string>
    <string name="daily_task_content">Task details</string>

    <string name="qzone">Qzone</string>
    <string name="QQ">QQ</string>
    <string name="blog">Weibo</string>
    <string name="moment">Moments</string>
    <string name="weixin_friend">WeChat</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="miliao">Mi Talk</string>
    <string name="miliao_feeds">Newsfeed</string>

    <string name="uninstall_share_tips">Install %1$s first</string>
    <string name="prepare_live_share_tips">Tap \"Start\" and share live stream to %1$s</string>
    <string name="cancel_share_tips">%1$s sharing is off</string>
    <string name="pre_live_share">Notify friends about this session</string>

    <string name="admin_manager_tips_1">1. Your manager is permanent, you don\'t need to add again next time.</string>
    <string name="admin_manager_tips_2">2. You can add up to 5 managers.</string>
    <string name="admin_manager_tips_3">3. The first person in your rankings can also ban comments without being a manager.</string>
    <string name="cancel_manage">Remove</string>
    <string name="search_txt">Search</string>
    <string name="match_hint">Only chosen people can view live stream</string>
    <string name="refreshing">Just a sec\u2026</string>
    <string name="match_ok_btn">OK (%1$d/%2$d)</string>
    <string name="select_live_line_friends">Invite a friend</string>
    <string name="room_friends">Friends in this session</string>
    <string name="sel_count_hint">Can select up to %d people</string>
    <string name="remove_manager_fail">Couldn\'t cancle</string>
    <string name="cancel_banspeaker">Allow</string>
    <string name="endlive_duration">Total time</string>
    <string name="endlive_viewer">Total viewers</string>
    <string name="endlive_newfans">New followers</string>
    <string name="endlive_ticket">Coins received</string>
    <string name="endlive_top_three">Top 3 contributors</string>
    <string name="live_ended_enter_owner_chat_room">Enter the host\'s fans group</string>
    <plurals name="live_end_history_live_count">
        <item quantity="one">You\'ve had %d session already!</item>
        <item quantity="other">You\'ve had %d sessions already!</item>
    </plurals>
</resources>
