<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/panel_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black_trans_90"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_dimen_130"
            android:gravity="center"
            android:text="@string/game_forbid_title"
            android:textColor="@color/color_white_trans_60"
            android:textSize="@dimen/text_size_44" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_dimen_1"
            android:background="@color/color_white_trans_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_dimen_270"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/forbid_gift_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/game_setting_forbid_gift_msg"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingBottom="6.67dp"
                android:text="@string/game_forbid_gift"
                android:textColor="@color/bottom_panel_btn_txt_color"
                android:textSize="@dimen/control_panel_text_size" />

            <TextView
                android:id="@+id/forbid_system_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/game_setting_forbid_system_msg"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingBottom="6.67dp"
                android:text="@string/game_forbid_system"
                android:textColor="@color/bottom_panel_btn_txt_color"
                android:textSize="@dimen/control_panel_text_size" />

            <TextView
                android:id="@+id/forbid_chat_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/game_setting_forbid_chat_msg"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingBottom="6.67dp"
                android:text="@string/game_forbid_chat"
                android:textColor="@color/bottom_panel_btn_txt_color"
                android:textSize="@dimen/control_panel_text_size" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>