<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_fragment_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_black_trans_40">

    <RelativeLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_90"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/view_dimen_32"
        android:paddingRight="@dimen/view_dimen_32">

        <TextView
            android:id="@+id/clarity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/definition_bg"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_18"
            android:paddingRight="@dimen/margin_30"
            android:singleLine="true"
            android:text="@string/definition_high"
            android:textColor="@color/color_white_pressed_50"
            android:textSize="@dimen/text_size_30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/game_live"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_42" />

        <!--关闭按钮-->
        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="@dimen/margin_60"
            android:layout_height="@dimen/margin_60"
            android:layout_alignParentRight="true"
            android:src="@drawable/start_live_icon_close" />
    </RelativeLayout>

    <!--封面/直播标题等-->
    <RelativeLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/view_dimen_40"
        android:layout_marginRight="@dimen/view_dimen_40"
        android:layout_marginTop="@dimen/view_dimen_540">

        <LinearLayout
            android:id="@+id/title_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_live_title"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_42" />

            <EditText
                android:id="@+id/live_title_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="left"
                android:maxLines="2"
                android:text=""
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white_trans_40"
                android:textCursorDrawable="@drawable/live_edittext_color_cursor"
                android:textSize="@dimen/text_size_42" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/control_title_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_area"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/view_dimen_48"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/change_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_90"
                android:gravity="center"
                android:paddingLeft="@dimen/view_dimen_30"
                android:paddingRight="@dimen/view_dimen_30"
                android:text="@string/live_title_change"
                android:textColor="@color/color_white90_pressed_40"
                android:textSize="@dimen/text_size_36" />

            <TextView
                android:id="@+id/clear_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_90"
                android:layout_marginLeft="@dimen/view_dimen_30"
                android:gravity="center"
                android:paddingLeft="@dimen/view_dimen_30"
                android:paddingRight="@dimen/view_dimen_30"
                android:text="@string/live_title_clear"
                android:textColor="@color/color_white90_pressed_40"
                android:textSize="@dimen/text_size_36" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middle_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_container">

        <!--屏蔽消息-->
        <RelativeLayout
            android:id="@+id/block_area"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_dimen_140"
            android:layout_marginTop="@dimen/view_dimen_120"
            android:background="@color/color_black_trans_20">

            <TextView
                android:id="@+id/block_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/view_dimen_64"
                android:text="@string/block_message"
                android:textColor="@color/color_white_trans_40"
                android:textSize="@dimen/margin_40" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_60"
                android:src="@drawable/start_live_more_right_arrow" />
        </RelativeLayout>

        <View
            android:id="@+id/mute_sl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_dimen_1"
            android:layout_below="@+id/block_area"
            android:background="@color/color_white_trans_20" />

        <!--是否静音-->
        <RelativeLayout
            android:id="@+id/mute_area"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_dimen_140"
            android:layout_below="@+id/mute_sl"
            android:background="@color/color_black_trans_20">

            <TextView
                android:id="@+id/mute_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_64"
                android:text="@string/mute_yes_or_no"
                android:textColor="@color/color_white_trans_40"
                android:textSize="@dimen/margin_40" />

            <TextView
                android:id="@+id/mute_no_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_50"
                android:gravity="center"
                android:padding="@dimen/view_dimen_10"
                android:text="@string/mute_no"
                android:textColor="@color/color_white_trans_90"
                android:textSize="@dimen/margin_36" />

            <TextView
                android:id="@+id/mute_yes_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_60"
                android:layout_toLeftOf="@+id/mute_no_tv"
                android:gravity="center"
                android:padding="@dimen/view_dimen_10"
                android:text="@string/mute_yes"
                android:textColor="@color/color_white_trans_40"
                android:textSize="@dimen/margin_36" />
        </RelativeLayout>

        <View
            android:id="@+id/admin_sl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_dimen_1"
            android:layout_below="@+id/mute_area"
            android:background="@color/color_white_trans_20" />

        <!--添加管理员-->
        <RelativeLayout
            android:id="@+id/admin_area"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_140"
            android:layout_below="@id/admin_sl"
            android:background="@color/color_black_trans_20">

            <TextView
                android:id="@+id/admin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_64"
                android:text="@string/add_manager"
                android:textColor="@color/color_white_trans_40"
                android:textSize="@dimen/margin_40" />

            <ImageView
                android:id="@+id/next_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_60"
                android:src="@drawable/start_live_more_right_arrow" />

            <TextView
                android:id="@+id/admin_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_toLeftOf="@+id/next_iv"
                android:text="@null"
                android:textColor="@color/color_white_trans_90"
                android:textSize="@dimen/margin_36" />
        </RelativeLayout>

        <View
            android:id="@+id/daily_task_sl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_dimen_1"
            android:layout_below="@+id/admin_area"
            android:background="@color/color_white_trans_20"
            android:visibility="gone" />

        <!--每日任务-->
        <RelativeLayout
            android:id="@+id/daily_task_area"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_140"
            android:layout_below="@id/daily_task_sl"
            android:background="@color/color_black_trans_20"
            android:visibility="gone">

            <TextView
                android:id="@+id/daily_task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_64"
                android:text="@string/daily_task_title"
                android:textColor="@color/color_white_trans_40"
                android:textSize="@dimen/margin_40"></TextView>

            <ImageView
                android:id="@+id/iv_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_60"
                android:src="@drawable/start_live_more_right_arrow" />

            <TextView
                android:id="@+id/daily_task_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_toLeftOf="@+id/iv_task"
                android:text="@string/daily_task_content"
                android:textColor="@color/color_white_trans_90"
                android:textSize="@dimen/margin_36"></TextView>
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/share_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/begin_btn"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/share_friends_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="7.67dp"
            android:src="@drawable/bg_live_share_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pre_live_share"
            android:textColor="@color/color_white"
            android:textSize="14dp" />
    </LinearLayout>

    <!--开始直播按钮-->
    <TextView
        android:id="@+id/begin_btn"
        android:layout_width="@dimen/view_dimen_800"
        android:layout_height="@dimen/margin_110"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_200"
        android:layout_marginTop="24.67dp"
        android:background="@drawable/live_begin_btn_bg"
        android:gravity="center"
        android:text="@string/live_start"
        android:textColor="@color/color_black_trans_80"
        android:textSize="@dimen/text_size_44" />
</RelativeLayout>